[package]
name = "json_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
lazy_static = "1.4.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
walkdir = "2.3.3"

